--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #383e5d; }
+  background: #d1f407; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #c961d4; }
+  background: #fe3e6c; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #3db8a9; }
+  background: #2a0189; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #033832; }
+  background: #bfe0c9; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #78ed19; }
+  background: #8e2c4f; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #dc2030; }
+  background: #34a21c; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #f6614e; }
+  background: #a749e8; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #840e5c; }
+  background: #78c69d; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #88a675; }
+  background: #91c427; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #47342e; }
+  background: #8aaa94; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #7dba8e; }
+  background: #369767; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #0803e6; }
+  background: #86f136; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #846a26; }
+  background: #78d246; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #774fa1; }
+  background: #145dd8; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #d499f4; }
+  background: #7485f7; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #420a64; }
+  background: #dc12d3; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #52088e; }
+  background: #c5af72; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #fb5e79; }
+  background: #fbc902; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #69e726; }
+  background: #3e1737; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #216c60; }
+  background: #78fd77; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #53d5a0; }
+  background: #7565db; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #2b0313; }
+  background: #af0c4b; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #256927; }
+  background: #66096b; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #328afc; }
+  background: #4fb2e4; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #0a019b; }
+  background: #02302a; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #9c2b97; }
+  background: #47a751; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #4bcaf4; }
+  background: #cd0617; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #2cbfa5; }
+  background: #9b0bd8; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #48e7a8; }
+  background: #254d70; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #10f817; }
+  background: #187449; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #e39b2d; }
+  background: #0aae78; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #d7b653; }
+  background: #6d6494; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #d68218; }
+  background: #42399f; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #a3fdc1; }
+  background: #d1e267; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #b14b26; }
+  background: #33c909; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #e018b2; }
+  background: #4fc5d4; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #800317; }
+  background: #eaf0d0; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #1a1167; }
+  background: #0c04e8; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #8e417d; }
+  background: #088fd7; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #219540; }
+  background: #38ee8a; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #ef60f0; }
+  background: #cda470; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #b57fe2; }
+  background: #bb203c; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #0c43c6; }
+  background: #3313a8; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #a121b8; }
+  background: #768ffc; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #bd0b35; }
+  background: #86eb38; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #c1a6c9; }
+  background: #3d1d1d; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #6e13c2; }
+  background: #12bfbf; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #faf95e; }
+  background: #5efef6; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #2c7cd8; }
+  background: #3bfbef; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #c123c4; }
+  background: #16654e; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #ab58d4; }
+  background: #edfa9e; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #188e0a; }
+  background: #293ee9; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #103bc3; }
+  background: #9e1e63; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #ada06f; }
+  background: #d81d8e; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #fdc1d4; }
+  background: #60ff41; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #0fff5f; }
+  background: #0912cf; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #eaaa54; }
+  background: #892e3d; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #cbcca5; }
+  background: #e3fbb4; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #43a149; }
+  background: #4c53ba; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #70d55f; }
+  background: #2bba54; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #b8cbb1; }
+  background: #2ca1f8; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #1e738e; }
+  background: #42d01b; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #798ba2; }
+  background: #3b0fa5; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #bce8ad; }
+  background: #6c58fa; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #7930ef; }
+  background: #ff6bc7; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #4f3009; }
+  background: #2e39a3; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #c41f39; }
+  background: #444c76; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #7a7267; }
+  background: #2903c0; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #b9374d; }
+  background: #e23d69; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #f97cdb; }
+  background: #f1f936; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #8438e4; }
+  background: #627d62; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #2803e2; }
+  background: #7f3184; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #a2c598; }
+  background: #734a6d; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #e23b7b; }
+  background: #79b1bf; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #3d3709; }
+  background: #e3dfcf; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #a46093; }
+  background: #91f525; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #1a30db; }
+  background: #dce898; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #c8df4b; }
+  background: #cfd356; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #4913d9; }
+  background: #d35d25; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #0f3e16; }
+  background: #ecce88; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #cb6e3f; }
+  background: #3cc57f; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #4878d0; }
+  background: #c4d529; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #788b65; }
+  background: #408995; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #6f8473; }
+  background: #b43838; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #bb6ab2; }
+  background: #4eb00c; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #b725b0; }
+  background: #d607c5; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #8e122a; }
+  background: #228580; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #c837ad; }
+  background: #036a7d; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #cb4d49; }
+  background: #fae0c3; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #5e9799; }
+  background: #14cf03; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #f5b8a4; }
+  background: #af3384; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #719cc1; }
+  background: #02cb3c; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #0fc8d1; }
+  background: #8a3c05; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #8c1d6b; }
+  background: #38ca05; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #72b071; }
+  background: #765bd2; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #fd0239; }
+  background: #6e7f33; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #7a04d2; }
+  background: #abcb03; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #a18175; }
+  background: #608eec; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #ae23ec; }
+  background: #6effaf; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #4f0782; }
+  background: #cdbf65; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -17575,7 +17575,10 @@ input:not(:checked) + .slider-switch > .switch-non {
     font-size: 16px;
     color: #9A9A9A;
     margin-top: 12px;
-    margin-left: 4px; } }
+    margin-left: 4px; }
+
+  .guide-main-title {
+    padding-left: 0px !important; } }
 /*767 screen end here*/
 /*768 to 1023 screen css*/
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
@@ -17597,7 +17600,16 @@ input:not(:checked) + .slider-switch > .switch-non {
       flex-direction: column;
       margin-top: 25px; }
       .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper .view-box {
-        max-width: 100%; } }
+        max-width: 100%; }
+
+  .guide-logo-text {
+    font-size: 14px;
+    color: #9A9A9A;
+    margin-top: 12px;
+    margin-left: 4px; }
+
+  .guide-table th, .guide-table td {
+    min-width: 233px; } }
 @media only screen and (min-width: 320px) and (max-width: 1023px) {
   .tow-boxs-div {
     grid-template-columns: repeat(auto-fit, minmax(205px, 1fr)); }
