--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -5079,6 +5079,9 @@ height: 300px;
   grid-column: 2;
   align-self: center;
 }
+#left .left-guide-nav-div {
+  padding-right: 15px;
+}
 .left-guide-nav-div ul li {
   font-size: 16px;
   margin: 25px 0px;
