--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #d1f407; }
+  background: #8e63ff; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #fe3e6c; }
+  background: #cfcf89; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #2a0189; }
+  background: #c14de6; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #bfe0c9; }
+  background: #bc3a66; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #8e2c4f; }
+  background: #e8df7b; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #34a21c; }
+  background: #196abe; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #a749e8; }
+  background: #6bcbf0; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #78c69d; }
+  background: #707203; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #91c427; }
+  background: #160c03; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #8aaa94; }
+  background: #a9a649; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #369767; }
+  background: #c93f85; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #86f136; }
+  background: #df8e15; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #78d246; }
+  background: #26481a; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #145dd8; }
+  background: #8566a8; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #7485f7; }
+  background: #fe2a95; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #dc12d3; }
+  background: #677b69; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #c5af72; }
+  background: #875966; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #fbc902; }
+  background: #5204e2; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #3e1737; }
+  background: #9b7095; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #78fd77; }
+  background: #93c473; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #7565db; }
+  background: #9f8edc; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #af0c4b; }
+  background: #66bc8f; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #66096b; }
+  background: #9d6931; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #4fb2e4; }
+  background: #9b5e51; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #02302a; }
+  background: #9f8958; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #47a751; }
+  background: #60ef2a; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #cd0617; }
+  background: #b30169; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #9b0bd8; }
+  background: #be205b; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #254d70; }
+  background: #f30992; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #187449; }
+  background: #71038c; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #0aae78; }
+  background: #b17f83; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #6d6494; }
+  background: #4049b6; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #42399f; }
+  background: #445e0b; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #d1e267; }
+  background: #904b16; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #33c909; }
+  background: #4c1c10; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #4fc5d4; }
+  background: #f1d609; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #eaf0d0; }
+  background: #3e7d3b; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #0c04e8; }
+  background: #ed9c1b; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #088fd7; }
+  background: #3a7c1e; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #38ee8a; }
+  background: #73e3f5; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #cda470; }
+  background: #692caf; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #bb203c; }
+  background: #73a1d4; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #3313a8; }
+  background: #34ab8d; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #768ffc; }
+  background: #93dda5; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #86eb38; }
+  background: #7ddef8; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #3d1d1d; }
+  background: #471889; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #12bfbf; }
+  background: #59bf98; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #5efef6; }
+  background: #a57f58; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #3bfbef; }
+  background: #0be6b9; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #16654e; }
+  background: #2f5da8; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #edfa9e; }
+  background: #48c7b6; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #293ee9; }
+  background: #5869bf; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #9e1e63; }
+  background: #0e81e0; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #d81d8e; }
+  background: #d193ac; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #60ff41; }
+  background: #eabe39; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #0912cf; }
+  background: #9426ca; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #892e3d; }
+  background: #6e78ec; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #e3fbb4; }
+  background: #d7362b; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #4c53ba; }
+  background: #c0dd76; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #2bba54; }
+  background: #b1e00a; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #2ca1f8; }
+  background: #c2fe15; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #42d01b; }
+  background: #c34563; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #3b0fa5; }
+  background: #d03a92; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #6c58fa; }
+  background: #cf8c61; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #ff6bc7; }
+  background: #64370d; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #2e39a3; }
+  background: #a8298a; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #444c76; }
+  background: #e1a640; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #2903c0; }
+  background: #346a4b; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #e23d69; }
+  background: #eda7d3; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #f1f936; }
+  background: #74187a; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #627d62; }
+  background: #cad6e9; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #7f3184; }
+  background: #9d8d4d; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #734a6d; }
+  background: #238d90; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #79b1bf; }
+  background: #642890; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #e3dfcf; }
+  background: #070322; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #91f525; }
+  background: #1e7da5; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #dce898; }
+  background: #2c4ef1; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #cfd356; }
+  background: #566c53; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #d35d25; }
+  background: #035d6a; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #ecce88; }
+  background: #2925a5; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #3cc57f; }
+  background: #fa4f58; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #c4d529; }
+  background: #de2d70; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #408995; }
+  background: #6c2d8e; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #b43838; }
+  background: #9a4f8e; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #4eb00c; }
+  background: #565dd7; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #d607c5; }
+  background: #06d8e3; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #228580; }
+  background: #172546; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #036a7d; }
+  background: #4d2df8; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #fae0c3; }
+  background: #4141cc; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #14cf03; }
+  background: #94170d; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #af3384; }
+  background: #e8679a; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #02cb3c; }
+  background: #fc5828; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #8a3c05; }
+  background: #43196a; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #38ca05; }
+  background: #2e41ac; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #765bd2; }
+  background: #ebd71f; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #6e7f33; }
+  background: #07786a; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #abcb03; }
+  background: #de078b; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #608eec; }
+  background: #77505f; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #6effaf; }
+  background: #12336d; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #cdbf65; }
+  background: #c4da54; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16941,16 +16941,20 @@ input:not(:checked) + .slider-switch > .switch-non {
   grid-column: 2;
   align-self: center; }
 
+#left .left-guide-nav-div {
+  padding-right: 15px; }
+
 .left-guide-nav-div ul li {
   font-size: 16px;
   margin: 25px 0px;
   font-weight: 600;
-  color: #4C4C4C; }
+  color: #000;
+  /*4C4C4C*/ }
 
 .left-guide-nav-div ul li a {
   font-size: 16px;
   font-weight: 600;
-  color: #4C4C4C;
+  color: #000;
   text-decoration: none; }
 
 .left-guide-nav-div ul li a:hover {
