--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -5086,12 +5086,12 @@ height: 300px;
   font-size: 16px;
   margin: 25px 0px;
   font-weight: 600;
-  color: #4C4C4C;
+  color: #000; /*4C4C4C*/
 }
 .left-guide-nav-div ul li a{
   font-size: 16px;
   font-weight: 600;
-  color: #4C4C4C;
+  color: #000;
   text-decoration: none;
 } 
 .left-guide-nav-div ul li a:hover {
