--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #8e63ff; }
+  background: #8af3a2; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #cfcf89; }
+  background: #9b1c59; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #c14de6; }
+  background: #f9afb7; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #bc3a66; }
+  background: #bb50b0; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #e8df7b; }
+  background: #2379b5; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #196abe; }
+  background: #d92068; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #6bcbf0; }
+  background: #6406ef; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #707203; }
+  background: #f8a724; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #160c03; }
+  background: #912072; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #a9a649; }
+  background: #66cfe1; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #c93f85; }
+  background: #371252; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #df8e15; }
+  background: #6e6126; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #26481a; }
+  background: #51d6ac; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #8566a8; }
+  background: #8e7d30; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #fe2a95; }
+  background: #c409ac; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #677b69; }
+  background: #33368b; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #875966; }
+  background: #53ac66; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #5204e2; }
+  background: #157cdb; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #9b7095; }
+  background: #a61f79; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #93c473; }
+  background: #bf0348; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #9f8edc; }
+  background: #0104d8; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #66bc8f; }
+  background: #78b3c0; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #9d6931; }
+  background: #8e088f; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #9b5e51; }
+  background: #319a65; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #9f8958; }
+  background: #cd34c7; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #60ef2a; }
+  background: #612a24; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #b30169; }
+  background: #58751b; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #be205b; }
+  background: #1ec11c; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #f30992; }
+  background: #89f523; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #71038c; }
+  background: #f4676b; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #b17f83; }
+  background: #58495d; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #4049b6; }
+  background: #15c71b; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #445e0b; }
+  background: #0b8488; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #904b16; }
+  background: #b0ebfc; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #4c1c10; }
+  background: #a75362; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #f1d609; }
+  background: #1c4893; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #3e7d3b; }
+  background: #342b22; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #ed9c1b; }
+  background: #b0e2af; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #3a7c1e; }
+  background: #2a3d64; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #73e3f5; }
+  background: #d22b22; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #692caf; }
+  background: #b39a8c; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #73a1d4; }
+  background: #0d0d74; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #34ab8d; }
+  background: #7b3299; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #93dda5; }
+  background: #3709c9; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #7ddef8; }
+  background: #fd0136; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #471889; }
+  background: #1df367; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #59bf98; }
+  background: #d47019; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #a57f58; }
+  background: #015de3; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #0be6b9; }
+  background: #2defbf; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #2f5da8; }
+  background: #6c7b6c; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #48c7b6; }
+  background: #0c65d4; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #5869bf; }
+  background: #92877d; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #0e81e0; }
+  background: #ceadd8; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #d193ac; }
+  background: #b5d60a; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #eabe39; }
+  background: #39ae0d; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #9426ca; }
+  background: #463461; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #6e78ec; }
+  background: #3b2de1; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #d7362b; }
+  background: #e211e6; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #c0dd76; }
+  background: #7e63fb; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #b1e00a; }
+  background: #83b3ec; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #c2fe15; }
+  background: #2ce15d; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #c34563; }
+  background: #56a231; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #d03a92; }
+  background: #53602d; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #cf8c61; }
+  background: #22fb03; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #64370d; }
+  background: #d6c6ec; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #a8298a; }
+  background: #9e617c; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #e1a640; }
+  background: #08e5d7; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #346a4b; }
+  background: #5683ea; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #eda7d3; }
+  background: #8c51ad; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #74187a; }
+  background: #04cc70; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #cad6e9; }
+  background: #7b044f; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #9d8d4d; }
+  background: #8b3a1f; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #238d90; }
+  background: #2309c5; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #642890; }
+  background: #1c6f15; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #070322; }
+  background: #5dd0f0; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #1e7da5; }
+  background: #71aff6; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #2c4ef1; }
+  background: #f26d39; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #566c53; }
+  background: #0b013e; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #035d6a; }
+  background: #1af25f; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #2925a5; }
+  background: #360e2b; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #fa4f58; }
+  background: #1e7b47; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #de2d70; }
+  background: #5931b6; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #6c2d8e; }
+  background: #c4bfce; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #9a4f8e; }
+  background: #1a57c9; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #565dd7; }
+  background: #166816; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #06d8e3; }
+  background: #0abf76; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #172546; }
+  background: #3bb616; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #4d2df8; }
+  background: #5811e0; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #4141cc; }
+  background: #eb5489; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #94170d; }
+  background: #890980; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #e8679a; }
+  background: #5737de; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #fc5828; }
+  background: #b0a871; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #43196a; }
+  background: #671a62; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #2e41ac; }
+  background: #be54fd; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #ebd71f; }
+  background: #172a46; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #07786a; }
+  background: #582c58; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #de078b; }
+  background: #c3d60f; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #77505f; }
+  background: #fb0427; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #12336d; }
+  background: #4746bc; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #c4da54; }
+  background: #dbed83; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16884,7 +16884,8 @@ input:not(:checked) + .slider-switch > .switch-non {
 /*guid page css*/
 .title-guide {
   font-size: 16px;
-  font-weight: 600; }
+  font-weight: 600;
+  font-family: 'proxima-semi-bold'; }
 
 .guide-table th, .guide-table td {
   background: #fff;
@@ -16948,13 +16949,15 @@ input:not(:checked) + .slider-switch > .switch-non {
   font-size: 16px;
   margin: 25px 0px;
   font-weight: 600;
-  color: #000;
+  font-family: 'proxima-semi-bold';
+  color: #4C4C4C;
   /*4C4C4C*/ }
 
 .left-guide-nav-div ul li a {
   font-size: 16px;
   font-weight: 600;
-  color: #000;
+  font-family: 'proxima-semi-bold';
+  color: #4C4C4C;
   text-decoration: none; }
 
 .left-guide-nav-div ul li a:hover {
