--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -5020,6 +5020,7 @@ height: 300px;
 .title-guide {
   font-size: 16px;
   font-weight: 600;
+  font-family: 'proxima-semi-bold';
 }
 .guide-table th, .guide-table td {
   background: #fff;
@@ -5086,12 +5087,14 @@ height: 300px;
   font-size: 16px;
   margin: 25px 0px;
   font-weight: 600;
-  color: #000; /*4C4C4C*/
+  font-family: 'proxima-semi-bold';
+  color: #4C4C4C; /*4C4C4C*/
 }
 .left-guide-nav-div ul li a{
   font-size: 16px;
   font-weight: 600;
-  color: #000;
+  font-family: 'proxima-semi-bold';
+  color: #4C4C4C;
   text-decoration: none;
 } 
 .left-guide-nav-div ul li a:hover {
